force-app/main/default/objects/Case_Creation_Rule__c/Case_Creation_Rule__c.object-meta.xml
<CustomObject>
    <description>Defines when a Case should be created for an Opportunity, what type/queue/record type it gets, and which documents must reach Final status before the Case fires (Phase 2). Evaluated by CaseCreationRuleEvaluatorAction @InvocableMethod.</description>
    <label>Case Creation Rule</label>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Creation Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>