force-app/main/default/objects/Case_Creation_Rule__c/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <description>Value set on Case.Type when a Case is created. Must match an existing Case Type picklist value.</description>
    <label>Case Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>