force-app/main/default/objects/Case_Creation_Rule__c/fields/Logic_Expression__c.field-meta.xml
<CustomField>
    <fullName>Logic_Expression__c</fullName>
    <description>Boolean expression combining condition numbers. e.g. &quot;1 AND 2&quot; or &quot;1 OR 2&quot;. If blank, all conditions must pass (AND logic).</description>
    <label>Logic Expression</label>
    <length>255</length>
    <type>Text</type>
</CustomField>