force-app/main/default/objects/Case_Creation_Rule__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Evaluation order when multiple rules match the same Stage. Lower number = higher priority.</description>
    <label>Priority</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>