force-app/main/default/objects/Case_Creation_Rule__c/fields/Queue_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Queue_Developer_Name__c</fullName>
    <description>DeveloperName of the queue to assign as Case owner (e.g. Bid_Management_Queue). Flow resolves to QueueId at runtime.</description>
    <label>Queue Developer Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>