force-app/main/default/objects/Case_Creation_Rule__c/fields/Record_Type_Dev_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Dev_Name__c</fullName>
    <description>API name of the Case Record Type to assign (e.g. Deal_Support, B2B_Implementation). Flow resolves to RecordTypeId at runtime.</description>
    <label>Record Type Developer Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>