force-app/main/default/objects/Case_Creation_Rule__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>Opportunity StageName this rule is evaluated against. Must match the StageName picklist API value exactly.</description>
    <label>Opportunity Stage</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>