force-app/main/default/objects/Case_Creation_Rule__c/listViews/Active_Rules.listView-meta.xml
<ListView>
    <fullName>Active_Rules</fullName>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>Case_Type__c</columns>
    <columns>Record_Type_Dev_Name__c</columns>
    <columns>Queue_Developer_Name__c</columns>
    <columns>Priority__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Rules</label>
</ListView>