force-app/main/default/objects/Case_Creation_Rule__c/listViews/All_Rules.listView-meta.xml
<ListView>
    <fullName>All_Rules</fullName>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>Case_Type__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Rules</label>
</ListView>